changes upto share images

--- a/css/blog.css
+++ b/css/blog.css
@@ -198,6 +198,21 @@ h2 {
   margin-bottom: 0;
 }
 
+/* Blog Post page */
+
+#share-buttons p {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+#share-buttons img {
+  width: 55px;
+  border: 0;
+  box-shadow: 0;
+  display: inline;
+  vertical-align: top;
+  margin-bottom: 0;
+}
 
 /* Pagination */
 .pager {
@@ -211,7 +226,6 @@ h2 {
   border-radius: 30px;
 }
 
-
 /*
  * Blog posts
  */
@@ -220,14 +234,6 @@ h2 {
   margin-bottom: 40px;
   border-bottom: 1px solid #eee;
   padding-bottom: 20px;
-}
-
-#share-buttons img {
-  width: 35px;
-  padding: 5px;
-  border: 0;
-  box-shadow: 0;
-  display: inline;
 }
 
 .blog-post-title {
