--- a/css/blog.css
+++ b/css/blog.css
@@ -144,6 +144,8 @@ h2 {
   border: 3px solid #efefef;
   border-top: 0;
   border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
   margin-top: 30px;
 }
 
@@ -190,6 +192,8 @@ h2 {
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
   border: 5px dashed #e74c3c;
 }
 .sidebar-module-inset p:last-child,
@@ -224,6 +228,8 @@ h2 {
   padding: 10px 20px;
   text-align: center;
   border-radius: 30px;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
 }
 
 /*
@@ -272,6 +278,40 @@ h2 {
   background-color: #d2322d;
 }
 
+/* Home page */
+
+.home-nav {
+  margin-bottom: 0px;
+}
+
+#home-top {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: url(../images/background.jpg) repeat;
+}
+
+#home-top h1 {
+  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  padding-bottom: 10px;
+}
+
+#home-top .btn {
+  font-size: 25px;
+}
+
+#home-top input.form-control {
+  font-size: 25px;
+  height: 50px;
+}
+
+#first-paragraph-home {
+  padding-top: 50px;
+  text-align: center;
+  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
 /* About Page */
 
 #about h1 {
@@ -280,9 +320,11 @@ h2 {
   font-weight: 300;
 }
 
-#about img {
+#about img, #home-top img {
   height: 200px;
   border-radius: 120px;
+  -moz-border-radius: 120px;
+  -webkit-border-radius: 120px;
   margin-right: 30px;
   margin-bottom: 10px;
 }
@@ -317,6 +359,8 @@ h2 {
   background-color: #eee;
   margin: 5px;
   border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   box-shadow: 0 1px 1px #999;
   -moz-box-shadow: 0 1px 1px #999;
   -webkit-box-shadow: 0 1px 1px #999;
